* new splash icon API which allows to add metadata and re-use of splash icon information